payment page generated

--- a/src/app/home/layout/footer/footer.component.tns.html
+++ b/src/app/home/layout/footer/footer.component.tns.html
@@ -39,7 +39,7 @@
             </Label>
         </GridLayout>
         <GridLayout #tabContents col="2" rows="*, *" class="menu-box"
-            (tap)="onBottomNavTap('unit')" verticalAlignment="middle">
+            (tap)="onBottomNavTap('login')" verticalAlignment="middle">
             <Image class="nav_img" src="~/assets/images/fingerprint.png" row="0"></Image>
             <Label class="fa-regular" text="로그인" verticalAlignment="bottom"
                 horizontalAlignment="center" fontSize="15" row="1">
