--- a/src/app/home/unit-list/unit-list.component.html
+++ b/src/app/home/unit-list/unit-list.component.html
@@ -283,34 +283,29 @@
         </div>
     </section>
 
-    <section id="sec_review mgt30" *ngIf="selectedMenu === 'review'">
+    <section id="sec_review" class="mgt30" *ngIf="selectedMenu === 'review'">
         <div class="content">
             <div class="rv_write pdb50">
               <form [formGroup]="reviewform">
                 <textarea name="" id="" rows="5" formControlName="Content" placeholder="리뷰를 작성해 주세요."></textarea>
                 <!--파일첨부-->
-                <div class="rv_w_footer mgt10 clear">
+                <div class="rv_w_footer mgt10">
                     <div>
                         <app-img-attach (uploaded)="syncFileList($event)" [loadedFile]="uploadReviewFileList" [refresh]="refreshFile"></app-img-attach>
                     </div>
-                    <!-- <div class="leftBox">
-                        <app-img-multi [(files)]="uploadFileList"></app-img-multi>
-                    </div> -->
-                    <!-- <div class="leftBox">
-                        <label for="file_btn" class="file_btn"></label>
-                        <input type="file" id="file_btn" accept="image/*" >
-                        <span class="desc">사진은 최대 4장까지 업로드 가능합니다.</span>
-                    </div> -->
-                    <div class="rightBox">
-                        평점&nbsp;&nbsp;
-                        <span style="color: #ff6600;">
-                            <input name="score" type="radio" formControlName="Score" name="Score" value="1">★&nbsp;&nbsp;
-                            <input name="score" type="radio" formControlName="Score" name="Score" value="2">★★&nbsp;&nbsp;
-                            <input name="score" type="radio" formControlName="Score" name="Score" value="3">★★★&nbsp;&nbsp;
-                            <input name="score" type="radio" formControlName="Score" name="Score" value="4">★★★★&nbsp;&nbsp;
-                            <input name="score" type="radio" formControlName="Score" name="Score" value="5">★★★★★&nbsp;&nbsp;
-                        </span>
-                        <button class="submit_btn primary_btn" type="submit" (click)="reviewReg()">등록</button>
+                    <div class="mgt10 clear">
+                        <div class="leftBox">
+                            <ul class="ul_h score">
+                                <li><label><input name="score" type="radio" formControlName="Score" name="Score" value="1"> ★</label></li>
+                                <li><label><input name="score" type="radio" formControlName="Score" name="Score" value="2"> ★★</label></li>
+                                <li><label><input name="score" type="radio" formControlName="Score" name="Score" value="3"> ★★★</label></li>
+                                <li><label><input name="score" type="radio" formControlName="Score" name="Score" value="4"> ★★★★</label></li>
+                                <li><label><input name="score" type="radio" formControlName="Score" name="Score" value="5"> ★★★★★</label></li>
+                            </ul>
+                        </div>
+                        <div class="rightBox">
+                            <button class="submit_btn primary_btn" type="submit" (click)="reviewReg()">등록</button>
+                        </div>
                     </div>
                 </div>
                 <!--/파일첨부-->
@@ -321,13 +316,20 @@
                     <!-- loop -->
                     <div class="rv_item">
                       <div *ngIf="rev.updContents == false">
-                        <div class="rv_header">
-                            <span>{{rev.RegUserNm}}</span> · <span>{{rev.RegDate}}</span>&nbsp;&nbsp;
-                            <span style="color: #ff6600;" *ngIf="rev.Score == 1">★</span>
-                            <span style="color: #ff6600;" *ngIf="rev.Score == 2">★★</span>
-                            <span style="color: #ff6600;" *ngIf="rev.Score == 3">★★★</span>
-                            <span style="color: #ff6600;" *ngIf="rev.Score == 4">★★★★</span>
-                            <span style="color: #ff6600;" *ngIf="rev.Score == 5">★★★★★</span>
+                        <div class="rv_header clear">
+                            <div class="leftBox">
+                                <span>{{rev.RegUserNm}}</span> · <span>{{rev.RegDate}}</span> · 
+                                <span class="score">
+                                    <label *ngIf="rev.Score == 1"> ★</label>
+                                    <label *ngIf="rev.Score == 2"> ★★</label>
+                                    <label *ngIf="rev.Score == 3"> ★★★</label>
+                                    <label *ngIf="rev.Score == 4"> ★★★★</label>
+                                    <label *ngIf="rev.Score == 5"> ★★★★★</label>
+                                </span>
+                            </div>
+                            <div class="rightBox">
+                                <a class="reply_btn mgr20" (click) = "buttonComm(rev)">답글</a>
+                            </div>
                         </div>
                         <div class="rv_body">
                             <p [ngClass]="[rev.moreButton ? '' : 'txt_post']">
@@ -336,9 +338,6 @@
                             </p>
                             <a class="more" (click) = "buttonMore(rev)" *ngIf="rev.Contents.length > 225 && !rev.moreButton ">더보기</a>
                             <a class="more" (click) = "buttonMore(rev)" *ngIf="rev.moreButton">줄이기</a>
-                            <div>
-                                <button class="submit_btn primary_btn" (click) = "buttonComm(rev)">답글 달기</button>
-                            </div>
                             <div class="rv_pic">
                                 <ul class="ul_h">
                                     <li *ngFor ="let revf of rev.uploadfileList"><img src="{{revf.link}}" alt=""></li>
@@ -354,44 +353,41 @@
                                 <app-img-attach (uploaded)="syncUpdFileList($event)" [loadedFile]="uploadReviewUpdFileList" [refresh]="refreshFile"></app-img-attach>
                             </div>
                             <div>
-                              <div>
-                                <div>
-                                  <div>
-                                    <table width="100%">
-                                      <colgroup>
-                                        <col style="width: *">
-                                        <col style="width: 140px;">
-                                        <col style="width: 50px;">
-                                      </colgroup>
-                                      <thead>
-                                        <tr>
-                                          <th><span>파일명</span></th>
-                                          <th><span>파일크기</span></th>
-                                          <th><span>삭제</span></th>
-                                        </tr>
-                                      </thead>
-                                      <tbody *ngFor="let revf of rev.uploadfileList">
-                                        <tr>
-                                          <td><span><a href="{{revf.link}}" target="attach">{{revf.fileName}}</a></span></td>
-                                          <td><span>{{revf.size}}</span></td>
-                                          <td> <input type="checkbox" (click) = "changeValue(revf.delState, revf)"></td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </div>
-                                </div>
-                              </div>
+                                <table width="100%">
+                                  <colgroup>
+                                    <col style="width: auto;">
+                                    <col style="width: 140px;">
+                                    <col style="width: 50px;">
+                                  </colgroup>
+                                  <thead>
+                                    <tr>
+                                      <th><span>파일명</span></th>
+                                      <th><span>파일크기</span></th>
+                                      <th><span>삭제</span></th>
+                                    </tr>
+                                  </thead>
+                                  <tbody *ngFor="let revf of rev.uploadfileList">
+                                    <tr>
+                                      <td><span><a href="{{revf.link}}" target="attach">{{revf.fileName}}</a></span></td>
+                                      <td><span>{{revf.size}}</span></td>
+                                      <td> <input type="checkbox" (click) = "changeValue(revf.delState, revf)"></td>
+                                    </tr>
+                                  </tbody>
+                                </table>
                             </div>
-                            <div class="rightBox">
-                                평점&nbsp;&nbsp;
-                                <span style="color: #ff6600;">
-                                    <input type="radio" formControlName="Score" name="Score" value="1">★&nbsp;&nbsp;
-                                    <input type="radio" formControlName="Score" name="Score" value="2">★★&nbsp;&nbsp;
-                                    <input type="radio" formControlName="Score" name="Score" value="3">★★★&nbsp;&nbsp;
-                                    <input type="radio" formControlName="Score" name="Score" value="4">★★★★&nbsp;&nbsp;
-                                    <input type="radio" formControlName="Score" name="Score" value="5">★★★★★&nbsp;&nbsp;
-                                </span>
-                                <button class="submit_btn primary_btn" type="submit" (click)="reviewUpd(rev)">수정</button>
+                            <div class="clear">
+                                <div class="leftBox">
+                                    <ul class="ul_h score">
+                                        <li><label><input type="radio" formControlName="Score" name="Score" value="1"> ★</label></li>
+                                        <li><label><input type="radio" formControlName="Score" name="Score" value="2"> ★★</label></li>
+                                        <li><label><input type="radio" formControlName="Score" name="Score" value="3"> ★★★</label></li>
+                                        <li><label><input type="radio" formControlName="Score" name="Score" value="4"> ★★★★</label></li>
+                                        <li><label><input type="radio" formControlName="Score" name="Score" value="5"> ★★★★★</label></li>
+                                    </ul>
+                                </div>
+                                <div class="rightBox">
+                                    <button class="submit_btn primary_btn" type="submit" (click)="reviewUpd(rev)">수정</button>
+                                </div>
                             </div>
                           </div>
                         </form>
@@ -470,26 +466,20 @@
         </div>
     </section>
 
-    <section id="sec_question mgt30" *ngIf="selectedMenu === 'question'">
+    <section id="sec_question" class="mgt30" *ngIf="selectedMenu === 'question'">
         <div class="content">
             <div class="rv_write pdb50">
               <form [formGroup]="questionform">
                 <textarea name="" id="" rows="5" formControlName="Content" placeholder="문의를 작성해 주세요."></textarea>
                 <!--파일첨부-->
-                <div class="rv_w_footer mgt10 clear">
+                <div class="rv_w_footer mgt10">
                     <div>
                         <app-img-attach (uploaded)="syncQFileList($event)" [loadedFile]="uploadQuestionFileList" [refresh]="refreshFile"></app-img-attach>
                     </div>
-                    <!-- <div class="leftBox">
-                        <app-img-multi [(files)]="uploadFileList"></app-img-multi>
-                    </div> -->
-                    <!-- <div class="leftBox">
-                        <label for="file_btn" class="file_btn"></label>
-                        <input type="file" id="file_btn" accept="image/*" >
-                        <span class="desc">사진은 최대 4장까지 업로드 가능합니다.</span>
-                    </div> -->
-                    <div class="rightBox">
-                        <button class="submit_btn primary_btn" type="submit" (click)="questionReg()">등록</button>
+                    <div class="mgt10 clear">
+                        <div class="rightBox">
+                            <button class="submit_btn primary_btn" type="submit" (click)="questionReg()">등록</button>
+                        </div>
                     </div>
                 </div>
                 <!--/파일첨부-->
@@ -533,7 +523,7 @@
                                   <div>
                                     <table width="100%">
                                       <colgroup>
-                                        <col style="width: *">
+                                        <col style="width: auto">
                                         <col style="width: 140px;">
                                         <col style="width: 50px;">
                                       </colgroup>
