--- a/src/app/home/main/main.component.tns.html
+++ b/src/app/home/main/main.component.tns.html
@@ -1,4 +1,4 @@
-<GridLayout>
+<GridLayout marginBottom="70">
     <ScrollView #scrollView (scroll)="onScroll($event, scrollView, topView)">
         <StackLayout>
             <Image #topView stretch="aspectFill" height="250" src="~/assets/images/visual.png">
