--- a/src/app/home/login/login.component.tns.html
+++ b/src/app/home/login/login.component.tns.html
@@ -1,1 +1,39 @@
-<Button text="login works!" class="btn btn-primary"></Button>
+<GridLayout class="content-container">
+    <GridLayout verticalAlignment="center" rows="auto, auto" horizontalAlignment="center"
+        class="content-box">
+        <Label row="0" text="로그인"></Label>
+        <StackLayout row="1" class="login-container">
+            <GridLayout columns="*, *" class="login-tab">
+                <Label text="회원 로그인" col="0" [ngClass]="[tab === 0 ? 'highlight-tab' : '']"
+                    (tap)="tab = 0"></Label>
+                <Label text="비회원 로그인" col="1" [ngClass]="[tab === 1 ? 'highlight-tab' : '']"
+                    (tap)="tab = 1"></Label>
+            </GridLayout>
+            <StackLayout *ngIf="tab === 0" class="tab_0">
+                <TextField [ngClass]="['input', 'text-id', valid.id ? 'valid-err' : '']" hint="아이디" [(ngModel)]="formData.LoginId"></TextField>
+                <TextField [ngClass]="['input', 'text-pwd', valid.pwd ? 'valid-err' : '']" hint="비밀번호" secure="true"
+                    [(ngModel)]="formData.Pwd"></TextField>
+                <Label text="아이디 혹은 비밀번호가 일치하지 않습니다." *ngIf="valid.member" color="#f22"></Label>
+                <GridLayout columns="auto, auto" class="auto-login-check">
+                    <CheckBox #autoLogin checked="false" col="0"></CheckBox>
+                    <Label text=" " col="0" (tap)="onCheck()"></Label>
+                    <Label text="로그인 유지" col="1" (tap)="onCheck()"></Label>
+                </GridLayout>
+                <Button text="로그인" class="btn-submit" (tap)="doLogin()"></Button>
+            </StackLayout>
+            <StackLayout *ngIf="tab === 1" class="tab_1">
+                <TextField class="input" hint="핸드폰번호"></TextField>
+                <TextField class="input" hint="예약번호"></TextField>
+                <Label text="일치하는 예약이 없습니다." *ngIf="valid.info" color="#f22"></Label>
+                <Button text="예약조회" class="btn-submit"></Button>
+            </StackLayout>
+            <GridLayout columns="auto, auto, auto, auto, auto" horizontalAlignment="center">
+                <Label col="0" text="회원가입"></Label>
+                <Label col="1" text=" / "></Label>
+                <Label col="2" text="아이디찾기"></Label>
+                <Label col="3" text=" / "></Label>
+                <Label col="4" text="비밀번호찾기"></Label>
+            </GridLayout>
+        </StackLayout>
+    </GridLayout>
+</GridLayout>
