--- a/src/app/home/login/login.component.tns.scss
+++ b/src/app/home/login/login.component.tns.scss
@@ -1,1 +1,64 @@
 /* Add mobile styles for the component here.  */
+.content-container{
+    background-color: #f6f6f6;
+
+    .content-box{
+        &>Label{
+            text-align: center;
+            font-size: 30;
+            color: #333;
+        }
+
+        .login-container{
+            max-width: 500;
+            margin: 20;
+
+            .login-tab{
+                Label{
+                    text-align: center;
+                    border-bottom-width: 1;
+                    border-color: #aaa;
+                    padding-bottom: 10;
+
+                    &.highlight-tab{
+                        color: #1b3a57;
+                        font-weight: bold;
+                        border-bottom-width: 2;
+                        border-color: #1b3a57;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.tab_0, .tab_1{
+    margin: 20 10 10 10;
+    TextField{
+        margin: 5 0;
+    }
+
+    .auto-login-check{
+        vertical-align: middle;
+        Label{
+            vertical-align: middle;
+        }
+    }
+}
+
+.input{
+    border-width: 0.5;
+    border-color: #aaa;
+    padding: 15;
+    padding-left: 5;
+}
+
+.btn-submit{
+    padding: 20;
+    color: #fff;
+    background-color: #333;
+}
+
+.valid-err{
+    border-color: #f22;
+}
