안드로이드 firebase 로그인, 로그아웃 설정 	modified:   App_Resources/Android/app.gradle 	new file:   App_Resources/Android/google-services.json 	new file:   firebase.nativescript.json 	modified:   src/app/app.component.tns.ts 	modified:   src/app/home/login/login.component.tns.html 	modified:   src/app/home/login/login.component.tns.ts 	modified:   src/app/service/session.service.tns.ts

--- a/src/app/home/login/login.component.tns.html
+++ b/src/app/home/login/login.component.tns.html
@@ -28,7 +28,7 @@
                 <Button text="예약조회" class="btn-submit"></Button>
             </StackLayout>
             <GridLayout columns="auto, auto, auto, auto, auto" horizontalAlignment="center">
-                <Label col="0" text="회원가입"></Label>
+                <Label col="0" text="회원가입" (tap)="signOut()"></Label>
                 <Label col="1" text=" / "></Label>
                 <Label col="2" text="아이디찾기"></Label>
                 <Label col="3" text=" / "></Label>
