안드로이드 로그인 세션관리 	modified:   src/app/app.component.tns.ts 	modified:   src/app/home/layout/footer/footer.component.tns.html 	modified:   src/app/home/layout/footer/footer.component.tns.ts 	modified:   src/app/home/login/login.component.tns.html 	modified:   src/app/home/login/login.component.tns.ts 	modified:   src/app/service/session.service.tns.ts 	modified:   src/app/shared/mobile/search-box/search-box.component.tns.ts 	modified:   src/app/shared/swiper/swiper.component.tns.ts

--- a/src/app/home/layout/footer/footer.component.tns.html
+++ b/src/app/home/layout/footer/footer.component.tns.html
@@ -41,7 +41,7 @@
         <GridLayout #tabContents col="2" rows="*, *" class="menu-box"
             (tap)="onBottomNavTap('login')" verticalAlignment="middle">
             <Image class="nav_img" src="~/assets/images/fingerprint.png" row="0"></Image>
-            <Label class="fa-regular" text="로그인" verticalAlignment="bottom"
+            <Label class="fa-regular" text="{{ isLoggedIn ? '마이페이지' : '로그인' }}" verticalAlignment="bottom"
                 horizontalAlignment="center" fontSize="15" row="1">
             </Label>
         </GridLayout>
