--- a/src/app/home/login/login.component.tns.html
+++ b/src/app/home/login/login.component.tns.html
@@ -30,9 +30,9 @@
             <GridLayout columns="auto, auto, auto, auto, auto" horizontalAlignment="center">
                 <Label col="0" text="회원가입" (tap)="signOut()"></Label>
                 <Label col="1" text=" / "></Label>
-                <Label col="2" text="아이디찾기"></Label>
+                <Label col="2" text="아이디찾기" (tap)="setData()"></Label>
                 <Label col="3" text=" / "></Label>
-                <Label col="4" text="비밀번호찾기"></Label>
+                <Label col="4" text="비밀번호찾기" (tap)="getData()"></Label>
             </GridLayout>
         </StackLayout>
     </GridLayout>
